# milch

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  milch.cpp  milch.h
.github/workflows/: cmake-multi-platform.yml  cmake.yml
examples/: CMakeLists.txt  README.md  simple_window.cpp
examples/milch_paint/: CMakeLists.txt  main.cpp
examples/simple_window/: CMakeLists.txt  simple_window.cpp
include/: color.hpp  error.hpp  shapes.hpp  window.hpp
include/milch/: milch.h  milch.hpp
src/: color.cpp  color.hpp  milch.cpp  milch.h  window.cpp
